deploy cny wheel v2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="top">
       <div class="badge">🧧 CNY LUCKY SPIN</div>
       <h1>Scan & Spin for CNY Rewards</h1>
-      <p class="sub">One spin per person · Please screenshot your result for staff redemption</p>
+      <p class="sub">One spin per table · Please show your result for staff redemption</p>
     </header>
 
     <section class="panel">
@@ -47,7 +47,7 @@
           <span class="dot">•</span>
           <span id="resultId">—</span>
         </div>
-        <div class="result-tip">Please screenshot this page and show it to staff</div>
+        <div class="result-tip">Please show this page to a staff member to redeem your CNY prize</div>
       </div>
 
       <div class="rules">
