deploy cny wheel v3

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer class="foot">
-      <span>Happy Lunar New Year 🧨</span>
+      <span>Happy Chinese New Year 🧨</span>
     </footer>
   </main>
 
