deploy logo name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="lantern lantern-right" aria-hidden="true"></div>
 
     <header class="top">
-      <div class="badge">🧧 CNY LUCKY SPIN</div>
+      <div class="badge">🧧 Mamamei CNY lucky spin</div>
       <h1>Scan &amp; Spin for CNY Rewards</h1>
       <p class="sub">One spin per table · Please show your result for staff redemption</p>
     </header>
