deploy non test

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <details>
           <summary>Rules</summary>
           <ul>
-            <li>One spin per device/browser (clearing browser data may bypass this).</li>
+            <li>One spin per table (clearing browser data may bypass this).</li>
             <li>Prizes are based on the result shown on this page after spinning.</li>
             <li>If anything looks wrong, staff decision is final.</li>
           </ul>
